--- a/style.html
+++ b/style.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>this is style of <html></html></h1>
+    <div>
+        <h2>Another line haha</h2>
+    </div>
 </body>
 </html>
